--- a/CosmeticShop/CosmeticShop.Data/CosmeticShop.Data.csproj
+++ b/CosmeticShop/CosmeticShop.Data/CosmeticShop.Data.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CosmeticShop.Entity\CosmeticShop.Entity.csproj" />
+    <ProjectReference Include="..\CosmeticShop.Shared\CosmeticShop.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
