--- a/CosmeticShop/CosmeticShop.Entity/CosmeticShop.Entity.csproj
+++ b/CosmeticShop/CosmeticShop.Entity/CosmeticShop.Entity.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CosmeticShop.Shared\CosmeticShop.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
