--- a/CosmeticShop/CosmeticShop.MVC/CosmeticShop.MVC.csproj
+++ b/CosmeticShop/CosmeticShop.MVC/CosmeticShop.MVC.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CosmeticShop.Business\CosmeticShop.Business.csproj" />
+    <ProjectReference Include="..\CosmeticShop.Shared\CosmeticShop.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
