--- a/CosmeticShop/CosmeticShop.Data/CosmeticShop.Data.csproj
+++ b/CosmeticShop/CosmeticShop.Data/CosmeticShop.Data.csproj
@@ -7,16 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CosmeticShop.Entity\CosmeticShop.Entity.csproj" />
     <ProjectReference Include="..\CosmeticShop.Shared\CosmeticShop.Shared.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Abstract\" />
   </ItemGroup>
 
 </Project>
