--- a/CosmeticShop/CosmeticShop.Data/CosmeticShop.Data.csproj
+++ b/CosmeticShop/CosmeticShop.Data/CosmeticShop.Data.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.17">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.17" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CosmeticShop.Entity\CosmeticShop.Entity.csproj" />
     <ProjectReference Include="..\CosmeticShop.Shared\CosmeticShop.Shared.csproj" />
   </ItemGroup>
