Viewmodels dosyası oluşturup viewlere model göndermek için kullanılacak.
response ve no content geriye bir şey döndürüp döndürmeme düşünülüyor şuanlık öylesine konuldu.

--- a/CosmeticShop/CosmeticShop.Business/CosmeticShop.Business.csproj
+++ b/CosmeticShop/CosmeticShop.Business/CosmeticShop.Business.csproj
@@ -11,4 +11,13 @@
     <ProjectReference Include="..\CosmeticShop.Shared\CosmeticShop.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Abstract\" />
+    <Folder Include="Concrete\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+  </ItemGroup>
+
 </Project>
