--- a/CosmeticShop/CosmeticShop.Shared/CosmeticShop.Shared.csproj
+++ b/CosmeticShop/CosmeticShop.Shared/CosmeticShop.Shared.csproj
@@ -9,5 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
   </ItemGroup>
-
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
 </Project>
