sepet işlemleri devam ediyor sepette ürün ödeme adımında kalındı.

--- a/CosmeticShop/CosmeticShop.UI/appsettings.json
+++ b/CosmeticShop/CosmeticShop.UI/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SqliteConnection": "Data Source=CosmeticShop.sqlite"
+  },
+  "EmailSender": {
+    "Host": "smtp.office365.com",
+    "Port": 587,
+    "EnableSSL": true,
+    "UserName": "mehmettest@hotmail.com",
+    "Password": "123456"
   }
 }
