projede çalışan methodlar çalışmamaya başladı ısvalid false geliyor registerda ve güncelmeme işlemlerinde bir sebepten hata alınıyor araştırılıyor

--- a/CosmeticShop/CosmeticShop.UI/CosmeticShop.UI.csproj
+++ b/CosmeticShop/CosmeticShop.UI/CosmeticShop.UI.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\CosmeticShop.Shared\CosmeticShop.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\Shared\Components\Categories\" />
+  </ItemGroup>
+
 </Project>
